# claude-only-l7r-combat-simulator

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
rules/: 02-skills.md  04-schools.md  05-school_knacks.md
simulations/: 9a0bc582-52a9-4f42-b547-923c9634681a.json
src/: api.py  app.py  mass_sim_ui.py  ui_helpers.py
src/engine/: attack_resolver.py  combat.py  combat_state.py  dice.py  expected_sw_table.json  kakita.py  mass_simulation.py  matsu.py  mirumoto.py  presets.py  school_registry.py  shinjo.py  simulation.py  simulation_storage.py  simulation_utils.py  skills.py  waveman.py  xp_builder.py
src/models/: __init__.py  character.py  combat.py  mass_simulation.py  school.py  weapon.py
tests/: conftest.py  test_advantages.py  test_akodo.py  test_api.py  test_app.py  test_audit_fixes.py  test_base_fighter.py  test_bayushi.py  test_brotherhood_monk.py  test_character.py  test_combat.py  test_combat_state.py  test_courtier.py  test_daidoji.py  test_dice.py  test_doji_artisan.py  test_duel.py  test_hida.py  test_hiruma.py  test_ide_diplomat.py  test_ikoma_bard.py  test_isawa_duelist.py  test_isawa_ishi.py  test_kakita.py  test_kitsuki.py  test_kuni.py  test_mass_sim_ui.py  test_mass_simulation.py  test_mass_simulation_models.py  test_matsu.py  test_merchant.py  test_mirumoto.py  test_models.py  test_otaku.py  test_presets.py  test_priest.py  test_school_registry.py  test_shiba.py  test_shinjo.py  test_shosuro.py  (+9 more)
tests/test_fighters/: test_akodo.py  test_bayushi.py  test_brotherhood_monk.py  test_courtier.py  test_daidoji.py  test_generic.py  (+21 more)
(+56 files in other folders)
