[project]
name = "l7r-combat-simulator"
version = "0.1.0"
description = "Tabletop RPG Combat Simulator based on L7R rules"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
